web/themes/quartiers_solidaires/assets/components/molecules/editor/editor.scss
@each $color, $value in $theme-colors {
  .rich-content.rich-content-#{$color},
  .quill-editor.ql-bubble.quill-editor-#{$color} .ql-picker.ql-header,
  .quill-editor.ql-bubble.quill-editor-#{$color} .ql-editor {
    .ql-picker-item[data-value="4"]:before,
    .ql-picker-item[data-value="5"]:before,
    h4, h5 {
      color: $value;
    }
  }
}

/*
 Just for the primary color, we set the heading tool options to a lighter purple
 in order to increase readability on dark background
 */
.quill-editor.ql-bubble.quill-editor-primary .ql-picker.ql-header,
.quill-editor.ql-bubble.quill-editor-primary .ql-editor {
  .ql-picker-item[data-value="4"]:before,
  .ql-picker-item[data-value="5"]:before {
    color: $purple-400;
  }
}

.quill-editor.ql-bubble .ql-picker-options,
.quill-editor.ql-bubble .ql-tooltip {
  background-color: #0c0808;
}

.rich-content {
  * {
    font-family: $font-family-base-webfonts;
    font-size: 1rem;
  }

  a {
    text-decoration: underline;
  }

  h4, h5 {
    font-weight: 600;
  }

  p + h4,
  p + h5 {
    margin-top: 2rem;
  }

  h4 {
    content: attr(data-h4-translation);
    font-size: $h5-font-size;

    @include media-breakpoint-down(xs) {
      font-size: $h5-font-size * 0.8;
    }
  }

  h5 {
    content: attr(data-h5-translation);
    font-size: $h6-font-size;
  }
}

.quill-label {
  display: inline-block;
  margin-bottom: .5rem;
  font-weight: 600;
}

.quill-editor.ql-container {
  min-height: 120px;
  height: auto;

  @include media-breakpoint-down(sm) {
    min-height: 200px;
  }

  .ql-editor {
    min-height: 120px;
    padding: 0;

    @include media-breakpoint-down(sm) {
      min-height: 200px;
    }

    h4, h5, p {
      margin-bottom: 1rem;
    }

    p + h4,
    p + h5 {
      margin-top: 2rem;
    }
  }

  .ql-editor.ql-blank::before {
    color: #858e96;
    font-size: $font-size-base;
    font-style: normal;
  }
}

.quill-editor.ql-bubble .ql-picker.ql-header,
.quill-editor.ql-bubble .ql-editor {
  * {
    font-family: $font-family-base-webfonts;
    font-size: 1rem;
    margin: 0;
  }

  a {
    text-decoration: underline;
  }

  p + h4,
  p + h5 {
    margin-top: 2rem;
  }

  .ql-picker-item[data-value="4"]:before,
  h4,
  .ql-picker-item[data-value="5"]:before,
  h5 {
    font-weight: 600;
  }

  .ql-picker-item[data-value="4"]:before,
  h4 {
    content: attr(data-h4-translation);
    font-size: $h5-font-size;

    @include media-breakpoint-down(xs) {
      font-size: $h5-font-size * 0.8;
    }
  }

  .ql-picker-item[data-value="5"]:before,
  h5 {
    content: attr(data-h5-translation);
    font-size: $h6-font-size;
  }

  .ql-picker-label[data-value="4"]:before {
    content: attr(data-h4-translation);
  }

  .ql-picker-label[data-value="5"]:before {
    content: attr(data-h5-translation);
  }
}

.ql-tooltip {
  z-index: 9999;
}

